--- a/src/etools/applications/field_monitoring/fm_settings/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/fm_settings/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-03-24 08:39+0000\n"
+"POT-Creation-Date: 2024-03-26 09:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,44 +18,50 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-msgid "Active"
-msgstr "Activo"
+msgid "Methods"
+msgstr "Métodos"
+
+msgid "Site ID"
+msgstr "ID del sitio"
 
 #, python-format
 msgid "Admin %s - Name"
 msgstr "Administrador %s - nombre"
 
 #, python-format
-msgid "Admin %s - Pcode"
-msgstr "Administrador %s - Pcode"
-
-#, python-format
 msgid "Admin %s - Type"
 msgstr "Administrador %s - Tipo"
 
-msgid "Answer Type"
-msgstr "Tipo de respuesta"
+#, python-format
+msgid "Admin %s - Pcode"
+msgstr "Administrador %s - Pcode"
 
-msgid "Ask for information source in checklist?"
-msgstr "¿Solicita la fuente de información en la lista de verificación?"
+msgid "Site"
+msgstr "Sitio"
+
+msgid "Lat"
+msgstr "Lat"
+
+msgid "Long"
+msgstr "Long"
+
+msgid "Active"
+msgstr "Activo"
+
+msgid "Related To"
+msgstr "Relacionado con"
+
+msgid "Name"
+msgstr "Nombre"
+
+msgid "Issue for Attention"
+msgstr "Asunto que requiere atención"
+
+msgid "Status"
+msgstr "Estado"
 
 msgid "Attachments"
 msgstr "Archivo adjunto"
-
-msgid "Boolean"
-msgstr "Booleano"
-
-msgid "CP Output"
-msgstr "Producto del CP"
-
-msgid "Category"
-msgstr "Categoría"
-
-msgid "Choices Size"
-msgstr "Tamaño de Selección"
-
-msgid "Count as HACT"
-msgstr "Cuenta como HACT"
 
 msgid "Global Attachments"
 msgstr "Adjuntos globales"
@@ -66,86 +72,35 @@ msgstr "Configuración global"
 msgid "Global Configs"
 msgstr "Configuraciones globales"
 
-msgid "HACT questions can only be related at the Partner Organization Level"
-msgstr "Las preguntas del HACT solo se pueden relacionar a nivel del socio implementador"
+msgid "Short Name"
+msgstr "Nombre corto"
 
-msgid "Inactive"
-msgstr "Inactivo"
-
-msgid "Is Active"
-msgstr "Está Activo"
-
-msgid "Is Custom"
-msgstr "Es personalizada"
-
-msgid "Issue Closed By"
-msgstr "Asunto Cerrado Por"
-
-msgid "Issue For Attention/Probing"
-msgstr "Tema para Prestar Atención/Sondeo"
-
-msgid "Issue Raised By"
-msgstr "Problema Planteado Por"
-
-msgid "Issue Related To"
-msgstr "Asunto Relacionado Con"
-
-msgid "Issue for Attention"
-msgstr "Asunto que requiere atención"
-
-msgid "Label"
-msgstr "Etiqueta"
-
-msgid "Lat"
-msgstr "Lat"
-
-msgid "Level"
-msgstr "Nivel"
-
-msgid "Likert Scale"
-msgstr "Escala Likert"
-
-msgid "Location"
-msgstr "Ubicación"
-
-msgid "Location/Site"
-msgstr "Ubicación/Sitio"
-
-msgid "Location Site"
-msgstr "Ubicación del Sitio"
-
-msgid "Location Sites"
-msgstr "Ubicaciones de los Sitios"
-
-msgid "Log Issue"
-msgstr "Registrar el Asunto"
-
-msgid "Log Issues"
-msgstr "Registrar los Asuntos"
-
-msgid "Long"
-msgstr "Long"
-
-msgid "Maximum one related object should be provided"
-msgstr "Debe proporcionarse un máximo de un objeto relacionado"
+msgid "Ask for information source in checklist?"
+msgstr "¿Solicita la fuente de información en la lista de verificación?"
 
 msgid "Method"
 msgstr "Método"
 
-msgid "Methods"
-msgstr "Métodos"
+msgid "Question Category"
+msgstr "Categoría de pregunta"
 
-msgid "Name"
-msgstr "Nombre"
+msgid "Questions Categories"
+msgstr "Categorías de preguntas"
+
+msgid "Text"
+msgstr "Texto"
 
 msgid "Number"
 msgstr "Número"
 
-msgid "Only one hact question can be active at any time."
-msgstr "Solo una pregunta de HACT puede estar activa en cualquier momento."
+msgid "Boolean"
+msgstr "Booleano"
 
-msgid "Option"
-msgstr "Opción"
+msgid "Likert Scale"
+msgstr "Escala Likert"
+
+msgid "Partner"
+msgstr "Socio"
 
 msgid "Output"
 msgstr "Producto"
@@ -153,62 +108,109 @@ msgstr "Producto"
 msgid "PD/SPD"
 msgstr "PD/SPD"
 
-msgid "P Code"
-msgstr "Código P"
+msgid "Answer Type"
+msgstr "Tipo de respuesta"
 
-msgid "Parent Location"
-msgstr "Ubicación de origen"
+msgid "Choices Size"
+msgstr "Tamaño de Selección"
 
-msgid "Partner"
-msgstr "Socio"
+msgid "Level"
+msgstr "Nivel"
 
-msgid "Point"
-msgstr "Punto"
-
-msgid "Question"
-msgstr "Pregunta"
-
-msgid "Question Category"
-msgstr "Categoría de pregunta"
-
-msgid "Question Text"
-msgstr "Texto de la pregunta"
-
-msgid "Questions"
-msgstr "Preguntas"
-
-msgid "Questions Categories"
-msgstr "Categorías de preguntas"
-
-msgid "Related To"
-msgstr "Relacionado con"
-
-msgid "Related object not provided"
-msgstr "Objeto relacionado no proporcionado"
+msgid "Category"
+msgstr "Categoría"
 
 msgid "Sections"
 msgstr "Secciones"
 
-msgid "Short Name"
-msgstr "Nombre corto"
+msgid "Question Text"
+msgstr "Texto de la pregunta"
 
-msgid "Site"
-msgstr "Sitio"
+msgid "Count as HACT"
+msgstr "Cuenta como HACT"
 
-msgid "Site ID"
-msgstr "ID del sitio"
+msgid "Is Custom"
+msgstr "Es personalizada"
 
-msgid "Site Specific Locations"
-msgstr "Ubicaciones Específicas del Sitio"
+msgid "Is Active"
+msgstr "Está Activo"
 
-msgid "Status"
-msgstr "Estado"
+msgid "Question"
+msgstr "Pregunta"
 
-msgid "Text"
-msgstr "Texto"
+msgid "Questions"
+msgstr "Preguntas"
+
+msgid "Label"
+msgstr "Etiqueta"
+
+msgid "Value"
+msgstr "Valor"
+
+msgid "Option"
+msgstr "Opción"
+
+msgid "Parent Location"
+msgstr "Ubicación de origen"
+
+msgid "P Code"
+msgstr "Código P"
+
+msgid "Point"
+msgstr "Punto"
+
+msgid "Location Site"
+msgstr "Ubicación del Sitio"
+
+msgid "Location Sites"
+msgstr "Ubicaciones de los Sitios"
+
+msgid "CP Output"
+msgstr "Producto del CP"
+
+msgid "Location/Site"
+msgstr "Ubicación/Sitio"
+
+msgid "Issue Raised By"
+msgstr "Problema Planteado Por"
+
+msgid "Location"
+msgstr "Ubicación"
+
+msgid "Issue For Attention/Probing"
+msgstr "Tema para Prestar Atención/Sondeo"
+
+msgid "Log Issue"
+msgstr "Registrar el Asunto"
+
+msgid "Log Issues"
+msgstr "Registrar los Asuntos"
+
+msgid "Related object not provided"
+msgstr "Objeto relacionado no proporcionado"
+
+msgid "Maximum one related object should be provided"
+msgstr "Debe proporcionarse un máximo de un objeto relacionado"
+
+msgid "HACT questions can only be related at the Partner Organization Level"
+msgstr ""
+"Las preguntas del HACT solo se pueden relacionar a nivel del socio "
+"implementador"
+
+msgid "Only one hact question can be active at any time."
+msgstr "Solo una pregunta de HACT puede estar activa en cualquier momento."
 
 msgid "The system provided questions cannot be edited."
 msgstr "Las preguntas proporcionadas por el sistema no se pueden editar."
 
-msgid "Value"
-msgstr "Valor"
+msgid "Inactive"
+msgstr "Inactivo"
+
+msgid "Issue Closed By"
+msgstr "Asunto Cerrado Por"
+
+msgid "Issue Related To"
+msgstr "Asunto Relacionado Con"
+
+msgid "Site Specific Locations"
+msgstr "Ubicaciones Específicas del Sitio"
