--- a/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/planning/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-25 10:45+0000\n"
+"POT-Creation-Date: 2024-03-26 09:10+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,235 +19,77 @@ msgstr ""
 "Plural-Forms: nplurals=6; plural=n==0 ? 0 : n==1 ? 1 : n==2 ? 2 : n%100>=3 "
 "&& n%100<=10 ? 3 : n%100>=11 && n%100<=99 ? 4 : 5;\n"
 
-msgid "Action Point Category"
-msgstr "فئة نقطة العمل"
+msgid "TPM Partner selected for staff activity"
+msgstr "تم اختيار شريك المراقب المستقل لنشاط الموظفين"
 
-msgid "Activity Attachments"
-msgstr "مرفقات النشاط"
-
-msgid "Annual Field Monitoring Rationale"
-msgstr "الأساس المنطقي السنوي للرصد الميداني"
-
-msgid "Assigned"
-msgstr "مُعَيَّن"
-
-msgid "At least one Partner, CP Output or PD/SPD should be added"
-msgstr "يجب إضافة شريك واحد على الأقل أو مُخرج CP أو PD / SPD"
-
-msgid "At least one checklist should be completed."
-msgstr "يجب إكمال قائمة تحقق واحدة على الأقل"
-
-msgid "At least one question should be enabled."
-msgstr "يجب تمكين سؤال واحد على الأقل"
-
-msgid "At least one summary finding should be completed."
-msgstr "يجب إكمال على الأقل تقرير واحد لموجز النتائج"
-
-msgid "Attachments"
-msgstr "المرفقات"
-
-msgid "CP Output"
-msgstr "CP مخرجات"
-
-msgid "Cancellation reason"
-msgstr "سبب الإلغاء"
-
-msgid "Cancellation reason should be provided."
-msgstr "يجب تقديم سبب الرفض"
-
-msgid "Cancelled"
-msgstr "مُلغى"
+msgid "Staff members do not belong to the selected partner"
+msgstr "أعضاء فريق العمل لا ينتمون إلى الشريك المحدد"
 
 #, python-format
-msgid "Cannot change fields while in %(status)s: %(field)s"
-msgstr "لا يمكن تغيير الحقول أثناء تواجد %(status)s %(field): s"
+msgid ""
+"You've selected a PD/SPD and unselected some of it's corresponding partners, "
+"please either remove the PD or add the partners back before saving: %s"
+msgstr ""
+"لقد حددت PD/SPD وألغيت تحديد بعض الشركاء المناظرين لها، يرجى إما إزالة PD أو "
+"إضافة الشركاء مرة أخرى قبل الحفظ: %s"
 
-msgid "Checklist"
-msgstr "قائمة التحقق"
-
-msgid "Completed"
-msgstr "مكتمل"
-
-msgid "Data Collection"
-msgstr "جمع البيانات"
-
-msgid "Document Type"
-msgstr "نوع الوثيقة"
-
-msgid "Draft"
-msgstr "الصياغة التمهيدية"
-
-msgid "End Date"
-msgstr "تاريخ الانتهاء"
-
-msgid "Field Office"
-msgstr "المكتب الميداني"
-
-msgid "Field Offices"
-msgstr "المكاتب الميدانية"
-
-msgid "History"
-msgstr "السجل التاريخي"
-
-msgid "Inactive"
-msgstr "غير فعال"
-
-msgid "Intervention"
-msgstr "تدخل"
-
-msgid "Is Active"
-msgstr "فعال"
-
-msgid "Link"
-msgstr "رابط"
-
-msgid "Location"
-msgstr "الموقع"
-
-msgid "Methodology Notes & Standards"
-msgstr "مذكرات ومعايير المنهجية"
-
-msgid "Modalities"
-msgstr "الطرق"
-
-msgid "Monitoring Activities"
-msgstr "أنشطة المراقبة"
-
-msgid "Monitoring Activity"
-msgstr "نشاط المراقبة"
-
-msgid "Monitoring Activity Action Point"
-msgstr "نقطة إجراء مراقب النشاط"
-
-msgid "Monitoring Activity Action Points"
-msgstr "نقاط إجراء مراقب النشاط"
-
-msgid "No Access"
-msgstr "لا يمكن الوصول"
-
-msgid "Office of Assignee"
-msgstr "مكتب المعين له العمل"
-
-msgid "Other Aspects of the Field Monitoring Plan"
-msgstr "جوانب أخرى لخطة الرصد الميداني"
-
-msgid "Outputs"
-msgstr "المخرجات"
-
-msgid "PD/SPD"
-msgstr "PD/SPD"
-
-msgid "Partner"
-msgstr "الشريك"
-
-msgid "Partner Engagement"
-msgstr "مساهمة الشريك"
+#, python-format
+msgid ""
+"You've selected a PD/SPD and unselected some of it's corresponding outputs, "
+"please either remove the PD or add the outputs back before saving: %s"
+msgstr ""
+"لقد حددت PD/SPD وألغيت تحديد بعض المخرجات المقابلة لها، يرجى إما إزالة PD أو "
+"إضافة المخرجات مرة أخرى قبل الحفظ: %s"
 
 msgid "Partner is not defined for TPM activity"
 msgstr "لم يتم تحديد الشريك لنشاط المُراقب المستقل"
 
-msgid "Person Responsible"
-msgstr "الشخص المسؤول"
-
-msgid "Prioritization Criteria"
-msgstr "معايير تحديد الأولويات"
-
-msgid "Priority"
-msgstr "الأولوية"
-
-msgid "Question"
-msgstr "سؤال"
-
-msgid "Question Template"
-msgstr "نماذج السؤال"
-
-msgid "Question Templates"
-msgstr "نماذج السؤال"
-
-msgid "Reference No."
-msgstr "الرقم المرجعي"
-
-msgid "Reference Number"
-msgstr "الرقم المرجعي"
-
-msgid "Rejection reason"
-msgstr "سبب الرفض"
+msgid "At least one Partner, CP Output or PD/SPD should be added"
+msgstr "يجب إضافة شريك واحد على الأقل أو مُخرج CP أو PD / SPD"
 
 msgid "Rejection reason should be provided."
 msgstr "يجب تقديم سبب الرفض"
 
-msgid "Related CP Output"
-msgstr "المعنيةCP مخرجات ال"
-
-msgid "Related PD/SPD"
-msgstr "المعني PD/SPD"
-
-msgid "Related Partner"
-msgstr "الشريك المعني"
-
-msgid "Report Finalization"
-msgstr "وضع الصيغة النهائية للتقرير"
+msgid "Cancellation reason should be provided."
+msgstr "يجب تقديم سبب الرفض"
 
 msgid "Report reject reason should be provided."
 msgstr "يجب تقديم سبب رفض التقرير"
 
-msgid "Report rejection reason"
-msgstr "سبب رفض التقرير"
+msgid "At least one question should be enabled."
+msgstr "يجب تمكين سؤال واحد على الأقل"
+
+msgid "At least one checklist should be completed."
+msgstr "يجب إكمال قائمة تحقق واحدة على الأقل"
+
+msgid "At least one summary finding should be completed."
+msgstr "يجب إكمال على الأقل تقرير واحد لموجز النتائج"
 
 #, python-format
 msgid "Required fields not completed in %(status)s: %(fields)s"
 msgstr "الحقول المطلوبة لم يتم إكمالها في %(status)s: %(fields)s"
 
-msgid "Review"
-msgstr "المعاينة"
+#, python-format
+msgid "Cannot change fields while in %(status)s: %(field)s"
+msgstr "لا يمكن تغيير الحقول أثناء تواجد %(status)s %(field): s"
 
-msgid "Section of Assignee"
-msgstr "قسم المعين له العمل"
+msgid "Prioritization Criteria"
+msgstr "معايير تحديد الأولويات"
 
-msgid "Sections"
-msgstr "الأقسام"
-
-msgid "Site"
-msgstr "مكان"
-
-msgid "Special"
-msgstr "مميز"
-
-msgid "Specific Details To Probe"
-msgstr "تفاصيل محددة للتحقيق"
-
-msgid "Staff"
-msgstr "الموظفين"
-
-msgid "Staff members do not belong to the selected partner"
-msgstr "أعضاء فريق العمل لا ينتمون إلى الشريك المحدد"
-
-msgid "Start Date"
-msgstr "تاريخ البدء"
-
-msgid "Status"
-msgstr "الحالة"
-
-msgid "Submitted"
-msgstr "معاينة التقارير"
-
-msgid "TPM"
-msgstr "المُراقب المستقل"
-
-msgid "TPM Partner"
-msgstr "المُراقب المستقل الشريك"
-
-msgid "TPM Partner selected for staff activity"
-msgstr "تم اختيار شريك المراقب المستقل لنشاط الموظفين"
+msgid "Methodology Notes & Standards"
+msgstr "مذكرات ومعايير المنهجية"
 
 msgid "Target Visits For The Year"
 msgstr "الزيارات المستهدفة في العام"
 
-msgid "Team Members"
-msgstr "أعضاء الفريق"
+msgid "Modalities"
+msgstr "الطرق"
 
-msgid "Templates"
-msgstr "النماذج"
+msgid "Partner Engagement"
+msgstr "مساهمة الشريك"
+
+msgid "Other Aspects of the Field Monitoring Plan"
+msgstr "جوانب أخرى لخطة الرصد الميداني"
 
 msgid "Year Plan"
 msgstr "خطة العام"
@@ -255,10 +97,176 @@ msgstr "خطة العام"
 msgid "Year Plans"
 msgstr "خطط العام"
 
-#, python-format
-msgid "You've selected a PD/SPD and unselected some of it's corresponding outputs, please either remove the PD or add the outputs back before saving: %s"
-msgstr "لقد حددت PD/SPD وألغيت تحديد بعض المخرجات المقابلة لها، يرجى إما إزالة PD أو إضافة المخرجات مرة أخرى قبل الحفظ: %s"
+msgid "Partner"
+msgstr "الشريك"
 
-#, python-format
-msgid "You've selected a PD/SPD and unselected some of it's corresponding partners, please either remove the PD or add the partners back before saving: %s"
-msgstr "لقد حددت PD/SPD وألغيت تحديد بعض الشركاء المناظرين لها، يرجى إما إزالة PD أو إضافة الشركاء مرة أخرى قبل الحفظ: %s"
+msgid "CP Output"
+msgstr "CP مخرجات"
+
+msgid "Intervention"
+msgstr "تدخل"
+
+msgid "Question"
+msgstr "سؤال"
+
+msgid "Is Active"
+msgstr "فعال"
+
+msgid "Specific Details To Probe"
+msgstr "تفاصيل محددة للتحقيق"
+
+msgid "Question Template"
+msgstr "نماذج السؤال"
+
+msgid "Question Templates"
+msgstr "نماذج السؤال"
+
+msgid "Staff"
+msgstr "الموظفين"
+
+msgid "TPM"
+msgstr "المُراقب المستقل"
+
+msgid "Draft"
+msgstr "الصياغة التمهيدية"
+
+msgid "Checklist"
+msgstr "قائمة التحقق"
+
+msgid "Review"
+msgstr "المعاينة"
+
+msgid "Assigned"
+msgstr "مُعَيَّن"
+
+msgid "Data Collection"
+msgstr "جمع البيانات"
+
+msgid "Report Finalization"
+msgstr "وضع الصيغة النهائية للتقرير"
+
+msgid "Submitted"
+msgstr "معاينة التقارير"
+
+msgid "Completed"
+msgstr "مكتمل"
+
+msgid "Cancelled"
+msgstr "مُلغى"
+
+msgid "Reference Number"
+msgstr "الرقم المرجعي"
+
+msgid "TPM Partner"
+msgstr "المُراقب المستقل الشريك"
+
+msgid "Team Members"
+msgstr "أعضاء الفريق"
+
+msgid "Person Responsible"
+msgstr "الشخص المسؤول"
+
+msgid "Field Office"
+msgstr "المكتب الميداني"
+
+msgid "Field Offices"
+msgstr "المكاتب الميدانية"
+
+msgid "Sections"
+msgstr "الأقسام"
+
+msgid "Location"
+msgstr "الموقع"
+
+msgid "Site"
+msgstr "مكان"
+
+msgid "PD/SPD"
+msgstr "PD/SPD"
+
+msgid "Outputs"
+msgstr "المخرجات"
+
+msgid "Start Date"
+msgstr "تاريخ البدء"
+
+msgid "End Date"
+msgstr "تاريخ الانتهاء"
+
+msgid "Status"
+msgstr "الحالة"
+
+msgid "Activity Attachments"
+msgstr "مرفقات النشاط"
+
+msgid "Rejection reason"
+msgstr "سبب الرفض"
+
+msgid "Report rejection reason"
+msgstr "سبب رفض التقرير"
+
+msgid "Cancellation reason"
+msgstr "سبب الإلغاء"
+
+msgid "Monitoring Activity"
+msgstr "نشاط المراقبة"
+
+msgid "Monitoring Activities"
+msgstr "أنشطة المراقبة"
+
+msgid "Monitoring Activity Action Point"
+msgstr "نقطة إجراء مراقب النشاط"
+
+msgid "Monitoring Activity Action Points"
+msgstr "نقاط إجراء مراقب النشاط"
+
+msgid "History"
+msgstr "السجل التاريخي"
+
+msgid "Document Type"
+msgstr "نوع الوثيقة"
+
+msgid "No Access"
+msgstr "لا يمكن الوصول"
+
+msgid "Inactive"
+msgstr "غير فعال"
+
+msgid "Special"
+msgstr "مميز"
+
+msgid "Reference No."
+msgstr "الرقم المرجعي"
+
+msgid "Related Partner"
+msgstr "الشريك المعني"
+
+msgid "Related PD/SPD"
+msgstr "المعني PD/SPD"
+
+msgid "Related CP Output"
+msgstr "المعنيةCP مخرجات ال"
+
+msgid "Section of Assignee"
+msgstr "قسم المعين له العمل"
+
+msgid "Office of Assignee"
+msgstr "مكتب المعين له العمل"
+
+msgid "Action Point Category"
+msgstr "فئة نقطة العمل"
+
+msgid "Link"
+msgstr "رابط"
+
+msgid "Priority"
+msgstr "الأولوية"
+
+msgid "Annual Field Monitoring Rationale"
+msgstr "الأساس المنطقي السنوي للرصد الميداني"
+
+msgid "Templates"
+msgstr "النماذج"
+
+msgid "Attachments"
+msgstr "المرفقات"
