--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-14 11:43+0000\n"
+"POT-Creation-Date: 2024-03-26 12:56+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1838,6 +1838,39 @@ msgstr "Documento"
 
 msgid "Invalid"
 msgstr "INVALID"
+
+msgid "Review for eTools reference number: "
+msgstr "Revisión del número de referencia de eTools: "
+
+msgid "Submitted By"
+msgstr "Presentado por"
+
+msgid "Date of submission for review"
+msgstr "Fecha de presentación para revisión"
+
+msgid "Overall Comment"
+msgstr "Comentario general"
+
+msgid "Overall Approval"
+msgstr "Aprobación general"
+
+msgid "Overall Review"
+msgstr "Revisión general"
+
+msgid "PRC Member Reviews"
+msgstr "Reseñas de miembros PRC"
+
+msgid "PRC Member Name"
+msgstr "Nombre de miembro PRC"
+
+msgid "Approved"
+msgstr "Aprobada"
+
+msgid "Approval comment"
+msgstr "Comentario de aprobación"
+
+msgid "Review date"
+msgstr "Fecha de revisión"
 
 msgid ""
 "Agreement cannot transition to signed until the start date is less than or "
