--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-14 11:43+0000\n"
+"POT-Creation-Date: 2024-03-26 12:56+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1830,6 +1830,39 @@ msgstr "Документ"
 
 msgid "Invalid"
 msgstr "Неверно"
+
+msgid "Review for eTools reference number: "
+msgstr "Обзор ссылочного номера eTools: "
+
+msgid "Submitted By"
+msgstr "Представленный"
+
+msgid "Date of submission for review"
+msgstr "Дата подачи на рассмотрение"
+
+msgid "Overall Comment"
+msgstr "Общий комментарий"
+
+msgid "Overall Approval"
+msgstr "Общее одобрение"
+
+msgid "Overall Review"
+msgstr "Общий обзор"
+
+msgid "PRC Member Reviews"
+msgstr "Отзывы участников"
+
+msgid "PRC Member Name"
+msgstr "Имя участника"
+
+msgid "Approved"
+msgstr "Одобренный"
+
+msgid "Approval comment"
+msgstr "Комментарий к утверждению"
+
+msgid "Review date"
+msgstr "Дата рассмотрения"
 
 msgid ""
 "Agreement cannot transition to signed until the start date is less than or "
