--- a/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ar/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-24 08:18+0000\n"
+"POT-Creation-Date: 2023-08-14 11:43+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1873,10 +1873,12 @@ msgstr ""
 "يجب ان يساوي إجمالي الحجز النقدي المبلغ الإجمالي الفعلي، و يكون قيمة المبالغ "
 "المعلقة 0"
 
-#, fuzzy
-#| msgid "Final Review Approved"
-msgid "Final Review must be approved"
-msgstr "تمت الموافقة على المراجعة النهائية"
+msgid ""
+"Final Review must be approved for documents having amount transferred "
+"greater than 100,000"
+msgstr ""
+"يجب الموافقة على المراجعة النهائية للوثائق التي يزيد المبلغ المحول عنها عن "
+"100،000"
 
 msgid "Cannot Transition status while adding an amendment"
 msgstr "لا يمكن نقل الحالة أثناء إضافة تعديل"
@@ -2214,13 +2216,6 @@ msgstr "لا تحتوي الاستجابة التي أرجعها الخادم ع
 
 msgid "Partnership Manager role required for pca export."
 msgstr "دور مدير الشراكة المطلوب لتصدير pca."
-
-#~ msgid ""
-#~ "Final Review must be approved for documents having amount transferred "
-#~ "greater than 100,000"
-#~ msgstr ""
-#~ "يجب الموافقة على المراجعة النهائية للوثائق التي يزيد المبلغ المحول عنها "
-#~ "عن 100،000"
 
 #~ msgid "Unable to associate staff member to UNICEF user"
 #~ msgstr "تعذر ربط الموظف بمستخدم اليونيسف"
