--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-24 08:18+0000\n"
+"POT-Creation-Date: 2023-08-14 11:43+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1915,10 +1915,12 @@ msgstr ""
 "El importe total de FR debe ser igual al importe total real, y el total de "
 "SES pendientes debe ser igual a 0."
 
-#, fuzzy
-#| msgid "Final Review Approved"
-msgid "Final Review must be approved"
-msgstr "Revisión final aprobada"
+msgid ""
+"Final Review must be approved for documents having amount transferred "
+"greater than 100,000"
+msgstr ""
+"La revisión final debe aprobarse para los documentos cuyo importe "
+"transferido sea superior a 100.000"
 
 msgid "Cannot Transition status while adding an amendment"
 msgstr "No se puede cambiar de estado al añadir una enmienda"
@@ -2281,13 +2283,6 @@ msgstr ""
 msgid "Partnership Manager role required for pca export."
 msgstr ""
 "Se requiere el rol de Gerente de asociación para la exportación de PCA."
-
-#~ msgid ""
-#~ "Final Review must be approved for documents having amount transferred "
-#~ "greater than 100,000"
-#~ msgstr ""
-#~ "La revisión final debe aprobarse para los documentos cuyo importe "
-#~ "transferido sea superior a 100.000"
 
 #~ msgid "Unable to associate staff member to UNICEF user"
 #~ msgstr ""
