update intervention cancel permissions: any prc secretary can cancel

--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-07-30 13:17+0800\n"
+"POT-Creation-Date: 2024-08-02 08:05+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1908,9 +1908,9 @@ msgid ""
 "Programme Document will not change status until the related PCA is in Signed "
 "status"
 msgstr ""
-"СоП, связанное с этим ПД, находится в статусе \"Черновик\", \"Приостановлен"
-"\" или \"Прекращен\". Данный программный документ невозможно изменить пока "
-"связанное с ним Соглашение не перейдет в статус \"Подписан\"."
+"СоП, связанное с этим ПД, находится в статусе \"Черновик\", "
+"\"Приостановлен\" или \"Прекращен\". Данный программный документ невозможно "
+"изменить пока связанное с ним Соглашение не перейдет в статус \"Подписан\"."
 
 msgid "PD cannot transition to signed if the Partner is Blocked in Vision"
 msgstr "ПД не может перейти к подписанию, если партнер заблокирован в VISION"
@@ -2161,9 +2161,6 @@ msgstr ""
 msgid "PD has already been cancelled."
 msgstr "ПД уже отменили."
 
-msgid "Only focal points or budget owners can cancel"
-msgstr "Только координаторы или владельцы бюджета могут отменить"
-
 msgid "Only PRC Secretary can cancel"
 msgstr ""
 
@@ -2246,6 +2243,9 @@ msgstr ""
 
 msgid "Partnership Manager role required for pca export."
 msgstr "Для экспорта PCA требуется роль менеджера по партнерству."
+
+#~ msgid "Only focal points or budget owners can cancel"
+#~ msgstr "Только координаторы или владельцы бюджета могут отменить"
 
 #~ msgid "Shared IP"
 #~ msgstr "Совместный ИП"
