--- a/src/etools/applications/field_monitoring/data_collection/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/field_monitoring/data_collection/locale/es/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-08-30 09:24+0000\n"
+"POT-Creation-Date: 2024-09-04 09:09+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -98,6 +98,9 @@ msgstr "Fuente de Información"
 
 msgid "General Observations"
 msgstr "Observaciones generales"
+
+msgid "Please enter general observations here"
+msgstr "Por favor ingrese aquí sus observaciones generales"
 
 #, python-format
 msgid "Unable to find %(level)s with id %(target_id)s"
