--- a/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/es/LC_MESSAGES/django.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: et-partners2-bk\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-08-02 08:05+0000\n"
+"POT-Creation-Date: 2024-09-24 09:12+0000\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1216,6 +1216,14 @@ msgstr "Funcionarios del PRC"
 msgid "Overall Approver"
 msgstr "Aprobador general"
 
+#, fuzzy
+#| msgid "CSO Authorized Officer"
+msgid "Authorized Officer"
+msgstr "CSO Funcionario autorizado"
+
+msgid "Recommend for Approval"
+msgstr ""
+
 msgid "Sent Back by Secretary Comment"
 msgstr "Enviado por el Secretario Comentario"
 
@@ -1634,6 +1642,9 @@ msgstr ""
 
 msgid "Vendor number must belong to PRG2 account group"
 msgstr "El número de proveedor debe pertenecer al grupo de cuentas PRG2"
+
+msgid "Authorized officer cannot be the same as overall approver."
+msgstr ""
 
 msgid "Unknown intervention."
 msgstr "Intervención desconocida."
@@ -2194,7 +2205,9 @@ msgstr ""
 msgid "PD is already in Signature status."
 msgstr "PD ya está en estado de firma."
 
-msgid "Only overall approver can accept review."
+#, fuzzy
+#| msgid "Only overall approver can accept review."
+msgid "Only authorized officer can accept review."
 msgstr "Solo el aprobador general puede aceptar la revisión."
 
 msgid "PD is already unlocked."
