--- a/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-09-24 09:12+0000\n"
+"POT-Creation-Date: 2024-10-28 07:37+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1012,6 +1012,9 @@ msgstr "Orientação técnica"
 msgid "Cancel Justification"
 msgstr "Cancelar Justificativa"
 
+msgid "Attachments"
+msgstr "Anexos"
+
 msgid "Metadata"
 msgstr "Metadados"
 
@@ -1486,9 +1489,6 @@ msgstr "Tipo de anexo"
 msgid "N/A"
 msgstr "N/A"
 
-msgid "Attachments"
-msgstr "Anexos"
-
 msgid "CSO Contribution"
 msgstr "Contribuição da OSC (Organização da Sociedade Civil)"
 
@@ -1539,6 +1539,9 @@ msgid ""
 msgstr ""
 "Um anexo não pode ser alterado nos status \"Finalizado, Fechado ou "
 "Encerrado\""
+
+msgid "Unable to find corresponding file type."
+msgstr ""
 
 msgid "An Output cannot be updated for a partner that is blocked in Vision"
 msgstr ""
@@ -1801,11 +1804,11 @@ msgstr "Oficial autorizado do UNICEF"
 msgid "Date Uploaded"
 msgstr "Data de upload"
 
-msgid "Document"
-msgstr "Documento"
-
 msgid "Invalid"
 msgstr "Inválido"
+
+msgid "Document"
+msgstr "Documento"
 
 msgid "Review for eTools reference number: "
 msgstr "Revisão do número de referência do eTools:"
