--- a/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
+++ b/src/etools/applications/partners/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-09-24 09:12+0000\n"
+"POT-Creation-Date: 2024-10-28 07:37+0000\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -996,6 +996,9 @@ msgstr "Техническое руководство"
 msgid "Cancel Justification"
 msgstr "Отменить обоснование"
 
+msgid "Attachments"
+msgstr "Вложения"
+
 msgid "Metadata"
 msgstr "Метаданные"
 
@@ -1464,9 +1467,6 @@ msgstr "Тип вложения"
 msgid "N/A"
 msgstr "н/д"
 
-msgid "Attachments"
-msgstr "Вложения"
-
 msgid "CSO Contribution"
 msgstr "Вклад ОГО"
 
@@ -1517,6 +1517,9 @@ msgid ""
 msgstr ""
 "Вложение не может быть изменено в статусах «Завершено», «Закрыто» или "
 "«Прервано»."
+
+msgid "Unable to find corresponding file type."
+msgstr ""
 
 msgid "An Output cannot be updated for a partner that is blocked in Vision"
 msgstr ""
@@ -1777,11 +1780,11 @@ msgstr "Уполномоченный сотрудник ЮНИСЕФ"
 msgid "Date Uploaded"
 msgstr "Дата загрузки"
 
-msgid "Document"
-msgstr "Документ"
-
 msgid "Invalid"
 msgstr "Неверно"
+
+msgid "Document"
+msgstr "Документ"
 
 msgid "Review for eTools reference number: "
 msgstr "Обзор ссылочного номера eTools: "
